# detour-rs

./: Cargo.toml  README.md  azure-pipelines.yml  rustfmt.toml
ci/: cargo-job-per-channel-target.yml  cargo-job.yml
examples/: create_window_detour.rs  messageboxw_detour.rs
src/: error.rs  lib.rs  macros.rs  traits.rs
src/alloc/: search.rs
src/arch/: detour.rs  mod.rs
src/arch/x86/: mod.rs  patcher.rs
src/arch/x86/thunk/: x86.rs
src/arch/x86/trampoline/: disasm.rs  mod.rs
src/detours/: generic.rs  mod.rs  raw.rs  statik.rs
src/pic/: thunk.rs
tests/: lib.rs
